clase1 orden exposicion

--- a/capa2023/clase01.Rmd
+++ b/capa2023/clase01.Rmd
@@ -202,7 +202,7 @@ division <- numero %/% 6
 resto <- numero %% 6
 division * 6 + resto
 
-# Interpolacion
+# Interpolacion lineal
 
 n1 <- 35000
 cv1 <- 7.9
@@ -216,7 +216,7 @@ cv
 
 ```
 
-###### [Interpolación](https://es.wikipedia.org/wiki/Interpolaci%C3%B3n_lineal)
+###### [Interpolación lineal](https://es.wikipedia.org/wiki/Interpolaci%C3%B3n_lineal)
 
 
 ***
@@ -255,7 +255,7 @@ vnumeros[c(FALSE, TRUE, TRUE, FALSE, TRUE, FALSE, TRUE)]
 
 ```
 #### Tambien pordemos extraer los valores que cumplan alguna condición:
-#### La función [base::*which*](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/which) nos responde qué índices son verdaderos.
+
 ```{r, echo=TRUE,  class.source='klippy'}
 # Al vectorizar, R evalúa la comparación elemento por elemento
 # vector booleano con TRUE donde el elemento es mayor que 4000, y FALSE en caso contrario.
@@ -263,7 +263,10 @@ vnumeros > 4000
 
 # elementos que cumplen la condición
 vnumeros[vnumeros > 4000] 
+```
 
+#### La función [base::*which*](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/which) nos responde qué índices son verdaderos.
+```{r, echo=TRUE,  class.source='klippy'}
 # índices de los elementos que cumplen la condición
 which(vnumeros > 4000)
 
@@ -285,7 +288,8 @@ vnumeros[c(TRUE, FALSE)]
 
 ```
 
-###### [Vectores y reciclado](https://cienciadedatos.github.io/r4ds/20-vectors.html#escalares-y-reglas-de-reciclado)
+##### Del sitio web de la versión en español de “R for Data Science”, de Hadley Wickham y Garrett Grolemund:
+###### [Escalares y reglas de reciclado](https://cienciadedatos.github.io/r4ds/20-vectors.html#escalares-y-reglas-de-reciclado)
 
 #### Puedo hacer operaciones con los vectores, o pasarlos como argumento de funciones que así lo admitan:
 ```{r, echo=TRUE,  class.source='klippy'}
@@ -306,7 +310,7 @@ mean(precios_enero)
 ```
 #### Tambien operaciones vectoriales
 ```{r, echo=TRUE,  class.source='klippy'}
-# La versión vectorial de la interpolación:
+# La versión vectorial de la interpolación lineal:
 p1 <- c(35000, 7.9)
 p2 <- c(30000, 8.5)
 
