clase 2 eah ind y hog

--- a/capa2023/clase02.Rmd
+++ b/capa2023/clase02.Rmd
@@ -19,7 +19,7 @@ Tibles, filtrar y agrupar:
 dplyr, filter, arrange, select, mutate,
 summarise, group_by, ungroup,
 ```
-Una versión actualizada de este material en : [clase02](https://mar71n.github.io/rconr/clase02.html)
+Una versión actualizada de este material en : [clase02](https://mar71n.github.io/rconr/apuntes2023/clase02.html)
 
 ***
 
@@ -30,36 +30,32 @@ library(dplyr)
 library(readr)
 #install.packages("lubridate")
 library(lubridate)
+#install.packages("ggplot2")
+library(ggplot2)
 ```
 
 ***
 
 ### Datasets
-#### Tomamos de data.buenosaires el registro de vacunaciones:
+#### Los individuales:
 ```{r, echo=TRUE,  class.source='klippy'}
-# https://data.buenosaires.gob.ar/dataset/plan-de-vacunacion-covid-19
-#vacunas <- read_csv("https://cdn.buenosaires.gob.ar/datosabiertos/datasets/salud/plan-de-vacunacion-covid-19/dataset_total_vacunas.csv")
-# download.file("https://cdn.buenosaires.gob.ar/datosabiertos/datasets/salud/plan-de-vacunacion-covid-19/dataset_total_vacunas.csv", "datos/dataset_total_vacunas.csv")
-vacunas <- read_csv("datos/dataset_total_vacunas.csv")
+eah2021_ind <- read_csv2("./datos/eah2021_bu_ampliada/eah2021_bu_ampliada_ind.txt")
+
+eah2021_hog <- read_csv2("./datos/eah2021_bu_ampliada/eah2021_bu_ampliada_hog.txt")
 ```
 
 #### Una primera mirada, según lo que esperemos, por lo general alguno de estos:
 #### [readr::spec](https://readr.tidyverse.org/reference/spec.html)
 ```{r, echo=TRUE,  class.source='klippy'}
-spec(vacunas)
+spec(eah2021_ind)
 
-head(vacunas)
+head(eah2021_ind)
 
-summary(vacunas)
+summary(eah2021_ind)
 ```
-##### veo que en DOSIS_3 hay NAs
 
-#### filtro los que tienen NAs
+#### Filtros
 #### con [*\[*](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/Extract)
-
-```{r, echo=TRUE,  class.source='klippy'}
-vacunas[is.na(vacunas$DOSIS_3),c(-1,-8)]
-```
 #### o con [*dplyr::filter*](https://dplyr.tidyverse.org/reference/filter.html)
  - ##### Subconjunto de datos donde todas las condiciones son VERDADERAS.
     ```{r, echo=TRUE,  class.source='klippy'}
@@ -95,25 +91,25 @@ x[x$B == "t",]
   - ##### is.na()
   - ##### between(), near()
 
+```{r, echo=TRUE,  class.source='klippy'}
+eah2021_hog[eah2021_hog$v12 == 4,]
+
+eah2021_hog %>% filter(v12 == 4)
+
+
+eah2021_ind %>% filter(between(edad, 30, 35))
+
+```
+
+
 ***
-
-```{r, echo=TRUE,  class.source='klippy'}
-vacunas %>% filter(is.na(vacunas$DOSIS_3)) %>% select(-FECHA_ADMINISTRACION, -ID_CARGA)
-```
-
-#### pongo cero en esos NAs 
-```{r, echo=TRUE,  class.source='klippy'}
-vacunas[is.na(vacunas$DOSIS_3), "DOSIS_3"] <- 0
-
-summary(vacunas)
-```
 
 #### Frecuencias
 ##### Con [*base::table*](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/table)
 ```{r, echo=TRUE,  class.source='klippy'}
-table(vacunas$GENERO)
+table(eah2021_ind$sexo)
 
-table(vacunas$GRUPO_ETARIO)
+table(eah2021_ind$comuna)
 ```
 
 #### Al modo dplyr:
@@ -137,7 +133,10 @@ table(vacunas$GRUPO_ETARIO)
    - Lógico: any(), all()
 
     ```{r, echo=TRUE,  class.source='klippy'}
-vacunas %>% summarise(mean(DOSIS_1))
+eah2021_ind %>% count(sexo)
+    
+eah2021_ind %>% group_by(sexo) %>% summarise(n = n())
+    
 
 ```
 
@@ -146,7 +145,7 @@ vacunas %>% summarise(mean(DOSIS_1))
 
   group_by() toma un tbl existente y lo convierte en un tbl agrupado donde las operaciones se realizan "por grupo". ungroup() elimina la agrupación.
     ```{r, echo=TRUE,  class.source='klippy'}
-vacunas %>% group_by(GENERO) %>% summarise(mean(DOSIS_1))
+#vacunas %>% group_by(GENERO) %>% summarise(mean(DOSIS_1))
 ```
 
 - [count](https://dplyr.tidyverse.org/reference/count.html)
@@ -157,15 +156,9 @@ vacunas %>% group_by(GENERO) %>% summarise(mean(DOSIS_1))
   Pasamos un **wt** para ponderar, cambiando el resumen de n = n() a n = sum(wt). 
 
     ```{r, echo=TRUE,  class.source='klippy'}
-vacunas %>% count(GENERO)
-
-vacunas %>% group_by(GENERO) %>% summarise(total = n())
-
-vacunas %>% count(GENERO, wt = DOSIS_1)
-
-vacunas %>% group_by(GENERO) %>% summarise(total = sum(DOSIS_1))
-
-vacunas %>% count(VACUNA, wt = DOSIS_1)
+eah2021_ind %>% count(sexo, wt = fexp)
+    
+eah2021_ind %>% group_by(sexo) %>% summarise(n = sum(fexp))
 ```
 
 ***
@@ -173,13 +166,13 @@ vacunas %>% count(VACUNA, wt = DOSIS_1)
 #### Que pasa con las fechas ?
 ##### Para esto cargamos la libreria [*lubridate*](https://lubridate.tidyverse.org/)
 ```{r, echo=TRUE,  class.source='klippy'}
-head(vacunas$FECHA_ADMINISTRACION)
+#head(vacunas$FECHA_ADMINISTRACION)
 
-max(vacunas$FECHA_ADMINISTRACION)
+#max(vacunas$FECHA_ADMINISTRACION)
 
-dmy_hms(head(vacunas$FECHA_ADMINISTRACION))
+#dmy_hms(head(vacunas$FECHA_ADMINISTRACION))
 
-max(dmy_hms(vacunas$FECHA_ADMINISTRACION))
+#max(dmy_hms(vacunas$FECHA_ADMINISTRACION))
 ```
 
 ***
@@ -191,14 +184,13 @@ max(dmy_hms(vacunas$FECHA_ADMINISTRACION))
    ##### **mutate()** agrega nuevas variables y conserva las existentes; **transmute()** agrega nuevas variables y elimina las existentes. Las nuevas variables sobrescriben las variables existentes del mismo nombre. Las variables se pueden eliminar estableciendo su valor en NULL
 
 ```{r, echo=TRUE,  class.source='klippy'}
-vacunas %>% select(GENERO, GRUPO_ETARIO)
+eah2021_ind %>% select(sexo, edad, estado)
 
-vacunas %>% select(GENERO, GRUPO_ETARIO, DOSIS_1, DOSIS_2, DOSIS_3)
+eah2021_ind %>% select(starts_with("i"))
 
-vacunas %>% select(GENERO, GRUPO_ETARIO, starts_with("DOSIS"))
-
-vacunas %>% mutate(total = (DOSIS_1 + DOSIS_2 + DOSIS_3)) %>% 
-            select(FECHA_ADMINISTRACION, GENERO, GRUPO_ETARIO, total)
+eah2021_ind %>% 
+  mutate(estado = factor(estado, levels= c(1:3), labels=c("Ocupado","Desocupado","Inactivo"))) %>%
+  select(sexo, edad, estado)
 ```
 
 #### Filtrar y ordenar
@@ -246,46 +238,6 @@ x[order(x$B),]
 
 ***
 
-##### Seguimos con las vacunas ...
-
-```{r, echo=TRUE,  class.source='klippy'}
-vacunas %>% mutate(total = (DOSIS_1 + DOSIS_2 + DOSIS_3)) %>% 
-            select(FECHA_ADMINISTRACION, GENERO, GRUPO_ETARIO, total) %>%
-            filter(GENERO == "F")
-
-vacunas %>% mutate(total = (DOSIS_1 + DOSIS_2 + DOSIS_3)) %>% select(FECHA_ADMINISTRACION, GENERO, GRUPO_ETARIO, total) %>%
-  filter(GRUPO_ETARIO == "51 a 60") %>%
-  arrange(desc(total))
-
-vacunas %>% mutate(total = (DOSIS_1 + DOSIS_2 + DOSIS_3)) %>% select(FECHA_ADMINISTRACION, GENERO, GRUPO_ETARIO, total) %>%
-  filter(total > 1000) %>%
-  arrange(GENERO, desc(GRUPO_ETARIO))
-
-```
-
-***
-
-#### Calculamos totales agrupando por GENERO
-##### [**goup_by()**](https://dplyr.tidyverse.org/reference/group_by.html) y [**summarise()**](https://dplyr.tidyverse.org/reference/summarise.html)
-```{r, echo=TRUE,  class.source='klippy'}
-library(ggplot2)
-
-data1 <- vacunas %>% 
-         mutate(total = (DOSIS_1 + DOSIS_2 + DOSIS_3)) %>% 
-         select(FECHA_ADMINISTRACION, GENERO, GRUPO_ETARIO, total) %>%
-         group_by(GENERO) %>% 
-         summarise(t = sum(total, na.rm=TRUE))
-
-data1
-```
-
-#### **fill**, **geom_bar**, **geom_text**
-```{r, echo=TRUE,  class.source='klippy'}
-ggplot(data1) + 
-  geom_bar(aes(GENERO,t, fill = GENERO), stat="identity", colour = "grey") +
-  geom_text(aes(x= GENERO, y = t, label= t), vjust= -0.5, color="black", size=4)
-```
-
 ***
 
 ##### [*options(...)*](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/options) nos permite ver y configurar opciones globales de R.
@@ -300,9 +252,6 @@ options(scipen=10)
 ```
 #### Sín notación cientifica y "factor comun" en aes(...)
 ```{r, echo=TRUE,  class.source='klippy'}
-ggplot(data1, aes(GENERO,t, fill = GENERO)) + 
-  geom_bar(stat="identity", colour = "grey") +
-  geom_text(aes(label= t), vjust= -0.5, color="black", size=4)
 
 # vuelvo a poner el valor anterior.
 options(scipen=actual[[1]])
@@ -311,68 +260,6 @@ options(scipen=actual[[1]])
 
 ***
 
-#### Calculamos totales por GENERO y GRUPO_ETARIO
-```{r, echo=TRUE,  class.source='klippy'}
-data2 <- vacunas %>% 
-         mutate(total = (DOSIS_1 + DOSIS_2 + DOSIS_3)) %>% 
-         select(FECHA_ADMINISTRACION, GENERO, GRUPO_ETARIO, total) %>%
-         group_by(GRUPO_ETARIO, GENERO) %>% 
-         summarise(t = sum(total, na.rm=TRUE))
-
-data2
-
-ggplot(data2, aes(GENERO,t, fill=GRUPO_ETARIO)) + 
-  geom_bar(stat="identity", colour = "grey") 
-
-ggplot(data2, aes(GRUPO_ETARIO, t, fill=GENERO)) + 
-  geom_bar(stat="identity") 
-```
-
-#### Ahora agrupo primero por GENERO y luego por GRUPO_ETARIO
-##### Ver que *data2* y *data3* son iguales salvo el orden de las columnas y las filas
-```{r, echo=TRUE,  class.source='klippy'}
-data3 <- vacunas %>% 
-         mutate(total = (DOSIS_1 + DOSIS_2 + DOSIS_3)) %>% 
-         select(FECHA_ADMINISTRACION, GENERO, GRUPO_ETARIO, total) %>%
-         group_by(GENERO, GRUPO_ETARIO) %>% summarise(t = sum(total, na.rm=TRUE))
-
-data1 %>% tally()
-data2 %>% tally()
-data3 %>% tally()
-```
-#### Los gráficos con data3 ¿Son iguales a los de data2?
-##### ¡ probar !
-
-***
-
-#### Otro paso para 'acomodar' los datos:
-#### Las "variables" DOSIS_1, DOSIS_2, DOSIS_3, es mejor verlas como tres valores de una nueva variable, implícita en el set de datos, que podemos llamar DOSIS.
-#### [*tidyr*](https://tidyr.tidyverse.org/)
-#### [*tidyr::pivot_longer()*](https://tidyr.tidyverse.org/reference/pivot_longer.html)
-```{r, echo=TRUE,  class.source='klippy'}
-# install.packages("tidyr")
-library(tidyr)
-
-vacunas %>% select(GRUPO_ETARIO, GENERO, DOSIS_1, DOSIS_2, DOSIS_3)
-
-vacunas %>% 
-  pivot_longer(cols = c(DOSIS_1, DOSIS_2, DOSIS_3), names_to = "DOSIS", values_to = "aplicadas") %>%
-  select(FECHA_ADMINISTRACION, GENERO, GRUPO_ETARIO, DOSIS, aplicadas)
-
-data4 <- vacunas %>% 
-         pivot_longer(cols = c(DOSIS_1, DOSIS_2, DOSIS_3), names_to = "DOSIS", values_to = "aplicadas") %>%
-         select(FECHA_ADMINISTRACION, GENERO, GRUPO_ETARIO, DOSIS, aplicadas) %>%
-         group_by(GRUPO_ETARIO, GENERO, DOSIS) %>% summarise(t = sum(aplicadas))
-
-data4
-```
-
-##### **facet_wrap**
-```{r, echo=TRUE,  class.source='klippy'}
-data4 %>% ggplot(aes(x = GENERO, y = t, fill = GRUPO_ETARIO)) +
-    geom_bar(stat="identity") +
-    facet_wrap(~ DOSIS)
-```
 
 ***
 ***
@@ -404,30 +291,19 @@ ggplot(dfa, aes(v1, v2)) +
 
 #### por defecto *position* es *"stack"*
 ```{r, echo=TRUE,  class.source='klippy'}
-ggplot(data2, aes(GRUPO_ETARIO, t, fill=GENERO)) + 
-  geom_bar(stat="identity", position = "stack") 
 ```
 
 #### Con *position* = *"dodge"*
 ```{r, echo=TRUE,  class.source='klippy'}
-ggplot(data2, aes(GRUPO_ETARIO, t, fill=GENERO)) + 
-  geom_bar(stat="identity", position = "dodge", colour = "grey") 
 # el el grafico de arriba, algunos tienen tres columnas otros dos (donde no hay casos GENERO = N)
 ```
 
 #### preserve (anchos de columna)
 ```{r, echo=TRUE,  class.source='klippy'}
-ggplot(data2, aes(GRUPO_ETARIO, t, fill=GENERO)) + 
-  geom_bar(stat="identity", position = position_dodge2(preserve = "single"), colour = "grey") 
-
-ggplot(data2, aes(GRUPO_ETARIO, t, fill=GENERO)) + 
-  geom_bar(stat="identity", position = position_dodge2(preserve = "total"), colour = "grey") 
 ```
 
 #### Con *position* = *"fill"*
 ```{r, echo=TRUE,  class.source='klippy'}
-ggplot(data2, aes(GRUPO_ETARIO, t, fill=GENERO)) + 
-  geom_bar(stat="identity", position = "fill", colour = "grey")
 ```
 
 ***
