--- a/capa2023/clase03.Rmd
+++ b/capa2023/clase03.Rmd
@@ -20,7 +20,7 @@ inner_join, left_join, right_join, full_join, semi_join, anti_join
 ggplot, geom_point, facet_grid, geom_bar, stat_count, stat_summary
 ```
 
-Una versión actualizada de este material en : [clase03](https://mar71n.github.io/rconr/clase03.html)
+Una versión actualizada de este material en : [clase03](https://mar71n.github.io/rconr/apuntes2023/clase03.html)
 
 ***
 
