--- a/capa2023/clase04.Rmd
+++ b/capa2023/clase04.Rmd
@@ -19,6 +19,10 @@ fechas:
 lubridate
 ```
 
+Una versión actualizada de este material en : [clase04](https://mar71n.github.io/rconr/apuntes2023/clase04.html)
+
+***
+
 ```{r, echo=TRUE,  class.source='klippy'}
 library(dplyr)
 library(readr)
